--- a/src/components/Cards-home.module.css
+++ b/src/components/Cards-home.module.css
@@ -22,8 +22,8 @@
 
 .cards-title {
     position: absolute;
-    width:100%;
-    text-align:center;
+    width: 100%;
+    text-align: center;
     top: 15%;
     padding: 0 20px 0 20px;
     font-family: 'Pinyon Script';
@@ -36,7 +36,7 @@
 .cards-link {
     position: absolute;
     top: 80%;
-    left:50%;
+    left: 50%;
     margin-left: -90px;
     width: 180px;
     height: 45px;
@@ -62,12 +62,95 @@
 }
 
 @media screen and (min-width:760px) {
+
     .container-cards {
-        height: 567px;
+        position: inherit;
+        display: flex;
+        min-width: 100%;
+        height: 400px;
+        margin-bottom: 50px;
     }
 
+    .cards-mini {
+        width: 100%;
+        height: auto;
+        padding: 0 50px 0 50px;
+        text-align: center;
+        border-radius: 5px;
+    }
+
+    .container-cards[pos="left"] {
+        flex-direction: row;
+    }
+
+    .container-cards[pos="left"][reveal="true"] .cards-mini {
+        transform: translateX(+500px);
+        opacity: 0;
+        animation: transxright 1s ease-in-out 1s normal forwards;
+    }
+
+    .container-cards[pos="right"] {
+        flex-direction: row-reverse;
+    }
+
+    .container-cards[pos="right"][reveal="true"] .cards-mini {
+        transform: translateX(-1000px);
+        opacity: 0;
+        animation: transxleft 1s ease-in-out 1s normal forwards;
+    }
+
+    .cards-header {
+        width: 50%;
+        border-radius: 5px;
+    }
+
+    .cards-information {
+        display: flex;
+        align-items: center;
+        height: 100%;
+        width: 49%;
+    }
+
+    @keyframes transxleft {
+        0% {
+            transform: translateX(-1000px);
+        }
+
+        100% {
+            transform: translateX(0);
+            opacity: 1;
+        }
+    }
+
+    @keyframes transxright {
+        0% {
+            transform: translateX(+500px);
+        }
+
+        100% {
+            transform: translateX(0);
+            opacity: 1;
+        }
+    }
+
+
     .cards-title {
+        position: initial;
         font-size: 3.5rem;
+        color: black;
+        text-shadow: none;
+    }
+
+    .cards-subtitle {
+        font-size: 1.5rem;
+        text-align: left;
+        padding: 10px 20px 0 20px;
+    }
+
+    .cards-link {
+        display: block;
+        position: initial;
+        margin: 20px auto 20px auto;
     }
 }
 
